--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.container {
+  width: 80%;
+  max-width: 1920px;
+  margin: 0 auto;
+}
+h1 {
+  background-color: black;
+  color: white;
+  margin: 5px;
+  padding: 15px;
+  border-radius: 10px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  border: 1px solid gray;
+  margin: 0 10px;
+  border-radius: 10px;
 }
+li {
+  padding: 15px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-bottom: 1px solid gray;  
 }
-
-.App-link {
-  color: #61dafb;
+ul li:last-child {
+  border-bottom: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li input {
+  margin-right: 10px;
 }
